--- a/test/NMediator.Test/NMediator.Test.csproj
+++ b/test/NMediator.Test/NMediator.Test.csproj
@@ -23,4 +23,10 @@
       <ProjectReference Include="..\..\src\NMediator\NMediator.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="TestData\Filters\CommandFilters" />
+      <Folder Include="TestData\Filters\EventFilters" />
+      <Folder Include="TestData\Filters\RequestFilters" />
+    </ItemGroup>
+
 </Project>
