--- a/test/NMediator.Extensions.Microsoft.DependencyInjection.Test/NMediator.Extensions.Microsoft.DependencyInjection.Test.csproj
+++ b/test/NMediator.Extensions.Microsoft.DependencyInjection.Test/NMediator.Extensions.Microsoft.DependencyInjection.Test.csproj
@@ -31,4 +31,8 @@
       <ProjectReference Include="..\..\src\NMediator.Extensions.Microsoft.DependencyInjection\NMediator.Extensions.Microsoft.DependencyInjection.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Filters" />
+    </ItemGroup>
+
 </Project>
