--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,15 +8,17 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET
+    - name: Setup dotnet 6.0
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
+    - name: Setup dotnet 3.1
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '3.1.x'
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
