--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet: [ '2.1.x', '3.1.x', '6.0.x' ]
     steps:
     - uses: actions/checkout@v3
-    - name: Setup dotnet 6.0
+    - name: Setup dotnet
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 6.0.x
-    - name: Setup dotnet 3.1
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '3.1.x'
+        dotnet-version: ${{ matrix.dotnet }}
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
