--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet: [ '2.1.x', '3.1.x', '6.0.x' ]
     steps:
     - uses: actions/checkout@v3
     - name: Setup dotnet
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: ${{ matrix.dotnet }}
+        dotnet-version: |
+          3.1.x
+          6.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
