--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,13 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Setup dotnet
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: |
-          2.1.x
           3.1.x
           6.0.x
     - name: Restore dependencies
