--- a/test/NMediator.Test/NMediator.Test.csproj
+++ b/test/NMediator.Test/NMediator.Test.csproj
@@ -4,11 +4,11 @@
 
         <IsPackable>false</IsPackable>
 
-        <TargetFrameworks>net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
-
         <OutputType>Library</OutputType>
 
         <LangVersion>latest</LangVersion>
+
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
