--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,9 @@ jobs:
     - name: Test
       run: dotnet test --configuration Release /p:Version=${VERSION} --no-build
     - name: Pack
-      run: dotnet pack src/NMediator/NMediator.csproj --configuration Release /p:Version=${VERSION} --no-build --output out
+      run: 
+        dotnet pack src/NMediator/NMediator.csproj --configuration Release /p:Version=${VERSION} --no-build --output output
+        dotnet pack src/NMediator.Extensions.Microsoft.DependencyInjection/NMediator.Extensions.Microsoft.DependencyInjection.csproj --configuration Release /p:Version=${VERSION} --no-build --output output
     - name: Push
       run: dotnet nuget push **/output/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_API_KEY}
       env:
