--- a/src/NMediator.Extensions.Autofac/NMediator.Extensions.Autofac.csproj
+++ b/src/NMediator.Extensions.Autofac/NMediator.Extensions.Autofac.csproj
@@ -6,10 +6,9 @@
         <AssemblyName>NMediator.Extensions.Autofac</AssemblyName>
         <Description>Autofac for NMediator</Description>
         <PackageTags>mediator;request;response;command;cqrs;ddd;pipeline;middleware;filter;</PackageTags>
+        <PackageProjectUrl>https://github.com/ppXD/NMediator</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/ppXD/NMediator</RepositoryUrl>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-        <PublishRepositoryUrl>true</PublishRepositoryUrl>
-        <EmbedUntrackedSources>true</EmbedUntrackedSources>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <LangVersion>latest</LangVersion>
