--- a/src/NMediator/NMediator.csproj
+++ b/src/NMediator/NMediator.csproj
@@ -6,14 +6,12 @@
         <AssemblyName>NMediator</AssemblyName>
         <Description>Simple and easy to use mediator framework for .NET</Description>
         <PackageTags>mediator;request;response;command;cqrs;ddd;pipeline;middleware;filter;</PackageTags>
+        <PackageProjectUrl>https://github.com/ppXD/NMediator</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/ppXD/NMediator</RepositoryUrl>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-        <PublishRepositoryUrl>true</PublishRepositoryUrl>
-        <EmbedUntrackedSources>true</EmbedUntrackedSources>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <TargetFrameworks>net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
         <LangVersion>latest</LangVersion>
         <Nullable>disable</Nullable>
-        <ContinuousIntegrationBuild Condition="'$(GITHUB_ACTIONS)' == 'true'">true</ContinuousIntegrationBuild>
     </PropertyGroup>
 
 </Project>
