--- a/examples/NMediator.Examples.AspNetCore/NMediator.Examples.AspNetCore.csproj
+++ b/examples/NMediator.Examples.AspNetCore/NMediator.Examples.AspNetCore.csproj
@@ -1,14 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\NMediator.Extensions.Microsoft.DependencyInjection\NMediator.Extensions.Microsoft.DependencyInjection.csproj" />
       <ProjectReference Include="..\NMediator.Examples\NMediator.Examples.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
