--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build_and_test:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
