--- a/src/NMediator.Extensions.Autofac/NMediator.Extensions.Autofac.csproj
+++ b/src/NMediator.Extensions.Autofac/NMediator.Extensions.Autofac.csproj
@@ -5,6 +5,7 @@
         <PackageId>NMediator.Extensions.Autofac</PackageId>
         <AssemblyName>NMediator.Extensions.Autofac</AssemblyName>
         <Description>Autofac for NMediator</Description>
+        <PackageIcon>logo.png</PackageIcon>
         <PackageTags>mediator;request;response;command;cqrs;ddd;pipeline;middleware;filter;</PackageTags>
         <PackageProjectUrl>https://github.com/ppXD/NMediator</PackageProjectUrl>
         <RepositoryUrl>https://github.com/ppXD/NMediator</RepositoryUrl>
@@ -15,6 +16,10 @@
         <TargetFrameworks>net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
     </PropertyGroup>
 
+    <ItemGroup>
+        <None Include="..\..\assets\logos\logo.png" Pack="true" PackagePath="" />
+    </ItemGroup>
+    
     <ItemGroup>
       <ProjectReference Include="..\NMediator\NMediator.csproj" />
     </ItemGroup>
