--- a/src/NMediator/NMediator.csproj
+++ b/src/NMediator/NMediator.csproj
@@ -5,7 +5,7 @@
         <PackageId>NMediator</PackageId>
         <AssemblyName>NMediator</AssemblyName>
         <Description>Simple and easy to use mediator framework for .NET</Description>
-        <PackageIcon>gradient_128x128.png</PackageIcon>
+        <PackageIcon>logo.png</PackageIcon>
         <PackageTags>mediator;request;response;command;cqrs;ddd;pipeline;middleware;filter;</PackageTags>
         <PackageProjectUrl>https://github.com/ppXD/NMediator</PackageProjectUrl>
         <RepositoryUrl>https://github.com/ppXD/NMediator</RepositoryUrl>
