--- a/src/NMediator/NMediator.csproj
+++ b/src/NMediator/NMediator.csproj
@@ -5,18 +5,14 @@
         <PackageId>NMediator</PackageId>
         <AssemblyName>NMediator</AssemblyName>
         <Description>Simple and easy to use mediator framework for .NET</Description>
-        <PackageIcon>logo.png</PackageIcon>
         <PackageTags>mediator;request;response;command;cqrs;ddd;pipeline;middleware;filter;</PackageTags>
         <PackageProjectUrl>https://github.com/ppXD/NMediator</PackageProjectUrl>
         <RepositoryUrl>https://github.com/ppXD/NMediator</RepositoryUrl>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <IconUrl>https://raw.githubusercontent.com/ppXD/NMediator/54098275da2afac32391298a9df76454808bce3b/assets/logos/logo_1024x1024.png</IconUrl>
         <TargetFrameworks>net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
         <LangVersion>latest</LangVersion>
         <Nullable>disable</Nullable>
     </PropertyGroup>
-
-    <ItemGroup>
-        <None Include="..\..\assets\logos\logo.png" Pack="true" PackagePath="" />
-    </ItemGroup>
     
 </Project>
